# g-cedd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  results_20260326_070546.json  test-sync.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
g-cedd/g_cedd/: __init__.py
g-cedd/g_cedd/modules/: git_extractor.py
g_cedd/: __init__.py  cli.py
g_cedd/modules/: __init__.py  banner.py  go_scanner_stub.py  html_report.py  path_checker.py  protocol_checker.py  reporter.py  secret_analyzer.py  serve.py  workspace.py
g_cedd/utils/: __init__.py
tests/: __init__.py  test_cli.py  test_modules.py
